k8s/result/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: 255990283375.dkr.ecr.us-east-1.amazonaws.com/voting-app-result:${NAMESPACE}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
