k8s/result/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: ${NAMESPACE}
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
